--- a/Source/Tailwind.Traders.Web/Dockerfile
+++ b/Source/Tailwind.Traders.Web/Dockerfile
@@ -7,7 +7,7 @@ FROM node:10-alpine as build-node
 WORKDIR /ClientApp
 COPY ClientApp/package.json .
 COPY ClientApp/package-lock.json .
-RUN whereis python
+RUN sudo apk add python make g++
 RUN npm install
 COPY ClientApp/ .
 RUN npm run build
