--- a/Source/Tailwind.Traders.Web/Dockerfile
+++ b/Source/Tailwind.Traders.Web/Dockerfile
@@ -7,6 +7,20 @@ FROM node:10-alpine as build-node
 WORKDIR /ClientApp
 COPY ClientApp/package.json .
 COPY ClientApp/package-lock.json .
+RUN echo "@testing http://dl-4.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories \
+  && apk add --update \
+              python3 \
+              python3-dev \
+  && pip3 install --no-cache-dir --upgrade --force-reinstall pip \
+  && rm /var/cache/apk/*
+RUN cd /usr/bin \
+  && ln -sf easy_install-3.5 easy_install \
+  && ln -sf idle3.5 idle \
+  && ln -sf pydoc3.5 pydoc \
+  && ln -sf python3.5 python \
+  && ln -sf python3.5-config python-config \
+  && ln -sf pip3.5 pip
+RUN pip install --no-cache-dir virtualenv
 RUN sudo apk add python make g++
 RUN npm install
 COPY ClientApp/ .
